--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,5 +25,6 @@ android {
 
 dependencies {
     implementation 'org.ftclib.ftclib:core:2.1.1' // core
+    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.8'
     implementation project(':FtcRobotController')
 }
